# 3D-Printer

./: .clangd  .gitignore  BuildLinux.sh  BuildLinux_clang.sh  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  UI自动化测试增强计划.md  build_deps.bat  build_release.bat  build_release_macos.sh  build_release_vs2022.bat  build_vs2022_unified.bat  extract_deps.bat  license_en.rtf  project_build.bat  run_creality_on_e_cores.bat  run_gettext.bat  run_gettext.sh  start.bat  test_build.bat  uos.sh  version.inc
.claude/: settings.local.json
.devcontainer/: postCreate.sh
.devcontainer/ubuntu20.04/: devcontainer.json
.devcontainer/ubuntu24.04/: devcontainer.json
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build_all.yml  build_check_cache.yml  build_creality_print.yml  build_deps.yml  build_windows.yml  check_locale.yml  check_profiles.yml  creality_bot.yml  release_deps.yml  schedule_bot.yml  sync_doc.yml  upload_doc.yml
ai_code_check/: checkRule.md
clang-tidy/: .clang-tidy  README.md  compile_commands.json  generate_compile_commands.bat  generate_compile_commands.py  run_clang_tidy.py
cmake/: BuildInfoUtil.cmake  BuildPlatformDetection.cmake  ConfigureAllModules.cmake  FileUtil.cmake  buildinfo.h.in
cmake/modules/: CheckUos.cmake  DetectOS.cmake  FindFFmpeg.cmake  FindOpenVDB.cmake  MacOSXBundleInfo.plist.in  NSIS.template.in
flatpak/: entrypoint  io.github.crealityofficial.CrealityPrint.metainfo.xml  io.github.crealityofficial.CrealityPrint.yml
flatpak/patches/: 0001-Enable-using-a-dark-theme-when-Gnome-dark-style-is-s.patch
lib/: Slic3r.pm
linux.d/: debian  debian2  deepin  kylin  uos
localization/i18n/: Community.pot  CrealityPrint.pot  DeviceList.pot  SendPage.pot  list.txt
package/: CMakeLists.txt  macx.cmake  package.cmake
package/macx/: CMakeDMGSetup.scpt
resources/: Icon.icns
resources/creality_models/: ksr_fdmtest_v4.3mf  ksr_fdmtest_v4.stl
resources/images/: 3mf.icns  CrealityPrint.icns  cxprj.icns  gcode.icns  stl.icns
resources/profiles/: Creality.json  CrealityUserMode.json
scripts/: BuildLinux_Package.sh  ParamPackUtil.py  breakpad.py  build_package_linux.sh  build_package_macos.sh  build_package_macos_offline.sh  check_profile_format.py  customized_data_config.py  generate_creality_presets.py  jenkins_package_build.bat  jenkins_package_build_offline.bat  sync_custom.bat  sync_custom.py  sync_web.bat  sync_web.sh
src/: BaseException.cpp  CMakeLists.txt  CrealityPrint.cpp  CrealityPrint_app_msvc.cpp  CrealityrintDump.cpp  CrealityrintDump.hpp  Crealityrint_dump.cpp  Crealityrint_dump.hpp  CxMiniDump.cpp
src/video/: CMakeLists.txt  RTSPDecoder.cpp  RTSPDecoder.h  WebRTCDecoder.cpp  WebRTCDecoder.h  YangRtcReceive.cpp
tests/: CMakeLists.txt  runtest.py
tests/engine/: CMakeLists.txt  engine_tests.cpp  test_import_3mf.cpp  test_import_obj.cpp  test_import_stl.cpp
(+2284 files in other folders)
